# aiida-inq

./: README.md  pyproject.toml
aiida_inq/calculations/: inq.py
aiida_inq/parsers/: inq.py
aiida_inq/workflows/: base.py  convergence.py  tddft.py
aiida_inq/workflows/protocols/: utils.py
aiida_inq/workflows/protocols/inq/: base.yaml
aiida_inq/workflows/protocols/pseudos/: pseudos.yaml
examples/: ex_base_workflow.py  ex_calculator.py  ex_convergence.py  ex_tddft.py  silicon.py
